Remove unused config and comments

--- a/404.html
+++ b/404.html
@@ -11,11 +11,6 @@
     <!-- Styles -->
     <style>
         @import 'tailwindcss';
-        
-        /**
-        * Use manual selector insted of media query for dark theme .
-        */
-        @custom-variant dark (&:where(.dark, .dark *));
 
         /**
         * This is workaround fix to handle viewport height issue on mobile browsers
@@ -35,6 +30,7 @@
             min-height: var(--tw-min-h-screen);
         }
     </style>
+    <!-- END Styles -->
 
     <title>Page Not Found</title>
 </head>
