Update sample text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body class="relative min-h-screen antialiased">
     <!-- Content -->
     <main>
-        <p>Hello world!</p>
+        <p>Starter HTML</p>
     </main>
     <!-- END Content -->
      
