--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <meta name="robots" content="index, follow">
         <!-- END SEO -->
     
-        <!-- Facebook open graph -->
+        <!-- Facebook Open Graph -->
         <meta property="og:url" content="https://mkfizi.dev">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Starter HTML">
         <meta property="og:image" content="path/to/img/meta-og.jpg">
         <meta property="og:description" content="Boilerplate for HTML and TailwindCSS projects.">
         <meta property="og:site_name" content="Starter HTML">
-        <!-- END Facebook open graph -->
+        <!-- END Facebook Open Graph -->
 
-        <!-- Twitter cards -->
+        <!-- Twitter Card -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@mkfizi">
         <meta name="twitter:creator" content="@mkfizi">
@@ -31,7 +31,7 @@
         <meta name="twitter:title" content="Starter HTML">
         <meta name="twitter:description" content="Boilerplate for HTML and TailwindCSS projects.">
         <meta name="twitter:image" content="path/to/img/meta-card.jpg">
-        <!-- END Twitter cards -->
+        <!-- END Twitter Card -->
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
