--- a/404.html
+++ b/404.html
@@ -7,13 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#ffffff">
         <meta name="robots" content="noindex">
-
-        <!-- Styles -->
+        <!-- END Metadata -->
+        <!-- Style -->
         <style>
             @import 'tailwindcss';
         </style>
-        <!-- END Styles -->
-
+        <!-- END Style -->
         <title>Page Not Found</title>
     </head>
     <body>
