--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
         <link rel="manifest" href="/site.webmanifest">
         <!-- END Favicon -->
-
-        <!-- Styles -->
+        <!-- Style -->
         <link rel="preload" href="./src/css/index.css" as="style">
         <link rel="stylesheet" href="./src/css/index.css">
-        <!-- END Styles -->
-
-        <!-- Scripts -->
+        <!-- END Style -->
+        <!-- Script -->
         <link rel="preload" href="./src/js/index.js" as="script">
         <script src="./src/js/index.js" type="module" defer></script>
-        <!-- END Scripts -->
-        
+        <!-- END Script -->
         <title>Starter HTML</title>
     </head>
     <body class="relative min-h-dvh antialiased">
@@ -60,6 +57,5 @@
             <p>Starter HTML</p>
         </main>
         <!-- END Content -->
-        
     </body>
 </html>
