Add vite and revise project structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,15 @@
         <!-- END Metadata -->
         <!-- SEO -->
         <meta name="title" content="Starter HTML">
-        <meta name="description" content="Boilerplate for HTML and TailwindCSS projects.">
+        <meta name="description" content="Starter kit for HTML and TailwindCSS projects.">
         <meta name="robots" content="index, follow">
         <!-- END SEO -->
         <!-- Facebook Open Graph -->
         <meta property="og:url" content="https://mkfizi.dev">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Starter HTML">
-        <meta property="og:image" content="path/to/img/meta-og.jpg">
-        <meta property="og:description" content="Boilerplate for HTML and TailwindCSS projects.">
+        <meta property="og:image" content="/img/meta-og.jpg">
+        <meta property="og:description" content="Starter kit for HTML and TailwindCSS projects.">
         <meta property="og:site_name" content="Starter HTML">
         <!-- END Facebook Open Graph -->
         <!-- Twitter Card -->
@@ -26,8 +26,8 @@
         <meta name="twitter:creator" content="@mkfizi">
         <meta name="twitter:url" content="https://mkfizi.dev">
         <meta name="twitter:title" content="Starter HTML">
-        <meta name="twitter:description" content="Boilerplate for HTML and TailwindCSS projects.">
-        <meta name="twitter:image" content="path/to/img/meta-card.jpg">
+        <meta name="twitter:description" content="Starter kit for HTML and TailwindCSS projects.">
+        <meta name="twitter:image" content="/img/meta-card.jpg">
         <!-- END Twitter Card -->
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -35,15 +35,15 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="/manifest.json">
         <!-- END Favicon -->
-        <!-- Style -->
-        <link rel="preload" href="./src/css/index.css" as="style">
-        <link rel="stylesheet" href="./src/css/index.css">
-        <!-- END Style -->
-        <!-- Script -->
-        <link rel="preload" href="./src/js/index.js" as="script">
-        <script src="./src/js/index.js" type="module" defer></script>
+		<!-- Style-->
+		<link rel="preload" href="/assets/css/app.css" as="style">
+		<link rel="stylesheet" href="/assets/css/app.css">
+		<!-- END Style -->
+		<!-- Script -->
+		<link rel="preload" href="/assets/js/app.ts" as="script">
+		<script src="/assets/js/app.ts" type="module" defer></script>
         <!-- END Script -->
         <title>Starter HTML</title>
     </head>
